--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: SISG Module 17: Computational Pipeline for WGS Data, July 27-29, 2022
+title: SISG Module 17 Computational Pipeline for WGS Data, July 27-29, 2022
 description: stuff
