--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: SISG Module 17 | Computational Pipeline for WGS Data
     
-description: July 27-29, 2022
-
+description: This site contains course materials for SISG Module 17: Computational Pipeline for WGS Data, July 27-29, 2022. The official SISG web page can be found [here]() (requires login) -- **course evaluations and certificates of completion will be available via this page.**
 
 theme: jekyll-theme-minimal
