--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
+theme: jekyll-theme-minimal
+
 title: SISG Module 17 | Computational Pipeline for WGS Data
     
 description: July 27-29, 2022
 
-theme: jekyll-theme-minimal
+show_downloads: true
